--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p> <a href="">Моя почта</a>,<a href="">Страница в ВК </a>  </p>
     </div>
     <div id="main">
-        <p class="infa">Увлекаться веб-дизайном начал 3 месяца назад. 
+        <p>Увлекаться веб-дизайном начал 3 месяца назад. 
         Сейчас хочется совершенствоваться в этом направлении. 
         Во время учебы в техникуме изучал: Delphi, VBA, Photoshop и т.д. 
         На данный момент я учусь в университете. Знаком с такими языками программирования как: C++, PHP, Java.
@@ -41,7 +41,7 @@
         </ul>
     </div>
     <div id="footer">
-        <p> <b>Дьяков Вячеслав</b> <br>
+        <p> <b>Вячеслав</b> <br>
             Воронеж, Россия +7 (950) ***-**-**, <a href=""> Моя почта</a>
         </p>
     </div>
